# pgmoneta

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  clang-format.sh  pgmoneta.spec  rules.yaml  uncrustify.cfg  uncrustify.sh
doc/: ARCHITECTURE.md  Azure.md  CLI.md  CMakeLists.txt  CONFIG.md  CONFIGURATION.md  CONSOLE.md  DEVELOPERS.md  DISTRIBUTIONS.md  ENCRYPTION.md  GETTING_STARTED.md  MIGRATION.md  PROMETHEUS.md  PR_GUIDE.md  RPM.md  S3.md  SPONSORS.md  SSH.md  TEST.md  TEST_ENVS.md  WAL.md  WALFILTER.md  WALINFO.md
doc/etc/: pgmoneta.conf  pgmoneta.service  pgmoneta_walfilter.conf  pgmoneta_walinfo.conf
doc/man/: pgmoneta-admin.1.rst  pgmoneta-cli.1.rst  pgmoneta-cli.conf.5.rst  pgmoneta-config.1.rst  pgmoneta-walfilter.1.rst  pgmoneta-walinfo.1.rst  pgmoneta.1.rst  pgmoneta.conf.5.rst
doc/manual/: 01-introduction.en.md  01-introduction.md  02-installation.md  97-acknowledgement.md  98-acknowledgement.md  98-licenses.md  99-acknowledgement.en.md  99-references.md  dev-00-head.en.md  dev-00-head.md  dev-01-git.md  dev-01-install.en.md  dev-01-install.md  dev-02-architecture.md  dev-02-git.en.md  dev-02-git.md  dev-03-architecture.en.md  dev-03-architecture.md  dev-03-encryption.md  dev-04-distributions.en.md  dev-04-distributions.md  dev-04-rpm.md  dev-05-building.md  dev-05-encryption.en.md  dev-05-encryption.md  dev-05-test.md  dev-06-rpm.en.md  dev-06-rpm.md  dev-06-test.md  dev-06-wal.md  dev-07-codecoverage.md  dev-07-wal.md  dev-08-wal.md  dev-09-core_api.md  user-00-head.en.md  user-00-head.md  user-01-introduction.en.md  user-01-quickstart.md  user-02-configuration.md  user-02-quickstart.en.md  (+12 more)
doc/manual/advanced/: 00-frontpage.md  01-preface.md  02-introduction.md  03-installation.md  04-backup.md  04-configuration.md  05-backup.md  05-keep.md  05-restore.md  06-retention.md  07-keep.md  08-restore.md  12-docker.md  97-acknowledgement.md
doc/manual/en/: 00-frontpage.md  01-introduction.md  02-installation.md  03-quickstart.md  04-configuration.md  05-cli.md  06-backup.md  07-retention.md  08-keep.md  09-restore.md  10-prometheus.md  11-admins.md  11-console.md  12-admins.md  12-shutdown.md  13-docker.md  14-ssh.md  16-s3.md  17-s3.md  17-wal-tools.md  18-wal-tools.md  18-xid64.md  19-config-generator.md  70-dev.md  71-git.md  72-architecture.md  73-encryption.md  75-building.md  76-test.md  78-wal.md  79-core-api.md  80-server-api.md  96-sponsors.md  97-acknowledgement.md  98-licenses.md  99-references.md
doc/manual/es/: 00-frontpage.md  01-introduction.md  02-installation.md  03-quickstart.md  04-configuration.md  05-cli.md  06-backup.md  07-retention.md  08-keep.md  09-restore.md  10-prometheus.md  11-console.md  12-admins.md  13-shutdown.md  14-docker.md  15-ssh.md  16-azure.md  17-s3.md  18-wal-tools.md  19-config-generator.md  70-dev.md  71-git.md  72-architecture.md  73-encryption.md  74-rpm.md  76-test.md  (+10 more)
doc/tutorial/: 01_install.md  02_remote_management.md  02_replication_slot.md  03_prometheus.md  03_remote_management.md  04_backup_restore.md  04_prometheus.md  05_archive.md  05_backup_restore.md  05_verify.md  06_archive.md  07_delete.md  07_encryption.md  08_encryption.md  09_retention.md  10_grafana.md  10_wal_shipping.md  11_wal_shipping.md  12_hot_standby.md  12_tls.md  13_hot_standby.md  14_annotate.md  15_extra.md  16_incremental_backup_restore.md  16_local_test.md  17_docker.md  18_local_test.md
src/: CMakeLists.txt  admin.c  cli.c  cmake_install.cmake  config.c  main.c  walfilter.c  walinfo.c
src/include/: achv.h  aes.h  archive.h  art.h  backup.h  brt.h  bzip2_compression.h  cmd.h  compression.h  configuration.h  console.h  csv.h  delete.h  deque.h  extension.h  extraction.h  files.h  fips.h  gzip.h  gzip_compression.h  hashmap.h  hot_standby.h  http.h  info.h  io.h  json.h  keep.h  link.h  logging.h  lz4_compression.h  management.h  manifest.h  memory.h  message.h  network.h  node.h  pgmoneta.h  progress.h  prometheus.h  prometheus_client.h  (+26 more)
src/libpgmoneta/: aes.c  archive.c  art.c  backup.c  brt.c  bzip2_compression.c  cmd.c  compression.c  compresssion.c  configuration.c  console.c  csv.c  delete.c  deque.c  extension.c  extraction.c  files.c  fips.c  gzip.c  gzip_compression.c  hashmap.c  http.c  info.c  io.c  json.c  keep.c  link.c  logging.c  lz4_compression.c  management.c  manifest.c  memory.c  message.c  network.c  node.c  pg_control.c  progress.c  prometheus.c  prometheus_client.c  remote.c  (+53 more)
test/: CMakeLists.txt  Dockerfile.rocky9  Dockerfile.testsuite  README.md  check.sh  coverage.sh  runner.c  testsuite.sh  tsclient.c  tsclient_http.c
test/conf/: pg_hba.conf  pgmoneta.conf
test/include/: html_report.h  mctf.h  tsclient.h  tsclient_helpers.h  tscommon.h  tssuite.h  tstablespaces.h  tswalfilter.h  tswalinfo.h  tswalutils.h  wal_utils.h
test/lib/: pgmoneta_ext_test.c  pgmoneta_ext_test.h  pgmoneta_test.c  pgmoneta_test.h  runner.c
test/libpgmonetatest/: html_report.c  mctf.c  mctf_logslice.c  mctf_logslice.h  tsclient.c  tsclient_helpers.c  tscommon.c  tstablespaces.c  tswalfilter.c  tswalinfo.c
test/pgmoneta/: CMakeLists.txt  pgmoneta_test.c  runner.c
test/pgmoneta_ext/: CMakeLists.txt  pgmoneta_ext_test.c  pgmoneta_ext_test.h  runner.c
test/script/: cleanup.sh  installation.sh  test_pgmoneta.sh  test_pgmoneta_ext.sh
test/testcases/: common.c  common.h  pgmoneta_test_1.c  pgmoneta_test_1.h  pgmoneta_test_10.c  pgmoneta_test_10.h  pgmoneta_test_2.c  pgmoneta_test_2.h  pgmoneta_test_3.c  pgmoneta_test_3.h  pgmoneta_test_4.c  pgmoneta_test_4.h  pgmoneta_test_5.c  pgmoneta_test_5.h  runner.c  test_aes.c  test_art.c  test_backup.c  test_backup_identifier.c  test_brt_io.c  test_cli.c  test_compression.c  test_configuration.c  test_delete.c  test_deque.c  test_extraction.c  test_finalize.c  test_hot_standby.c  test_http.c  test_json.c  test_progress.c  test_restore.c  test_restored_backup.c  test_server_api.c  test_streamer.c  test_tablespace.c  test_tablespaces.c  test_utils.c  test_vfile.c  test_wal_summary.c  (+5 more)
test/wal/: wal_17.c  wal_utils.c
(+216 files in other folders)
